# RhoaSim

./: CMakeLists.txt  package.xml
action/: DoMove.action  DoScan.action
cad/: rHOA.blend
config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  rhoa.rviz  rhoa_control.yaml  toto.rviz
launch/: multirobots.launch  one_rhoa.launch  rhoa_action_process.launch  rhoa_gmapping.launch  rhoa_navigation.launch  rhoa_observation_process.launch  rhoa_rviz.launch  rhoa_spawn.launch  rhoa_visualization.launch  simulation_multirobots.launch  simulation_onerobot.launch  spawn_urdf.launch
materials/: materials.xacro
meshes/: camera.dae  chassis.dae  sensor.dae  wheel.dae
models/aruco_pillar/: model.config  model.sdf
models/aruco_pillar/materials/scripts/: aruco_marker_0.material
robots/: rHoa.urdf.xacro
robots/macros/: camera.xacro  caster.xacro  chassis.xacro  diffDrive.xacro  inertia.xacro  lidar.xacro  proximitySensor.xacro  wheel.xacro
scripts/aruco_model_generator/: generate_aruco_model.py
src/rhoa_sim/: action_handler.py  action_handler_config.json  actions_handler.py  actions_handler_config.json  knowledge_handler.py  knowledge_handler_config.json
src/rhoa_sim/commons/: EHoAProcess.py  example_process_conf.json  messages.py  network.py  process.py  utils.py
src/rhoa_sim/commons/services/: ActionProcessServices.py  ObservationProcessServices.py  common.py
worlds/: Scenario1.world  WonderfulMap.world  map.world  map_4.world  map_5.world  sandbox.world
